--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,8 @@
         <title>The New OrcPub: D&D 5e Character Builder/Generator</title>
 		<link rel="stylesheet" href="/css/style.css" type="text/css">
 		<link rel="stylesheet" href="/css/compiled/styles.css" type="text/css">
-	<script>
+  <!-- TODO Remove completely, FB login no longer used ;TK -->
+	<!--script>
 	  (function(d, s, id){
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) {return;}
@@ -15,7 +16,7 @@
 	  js.src = "//connect.facebook.net/en_US/sdk.js";
 	  fjs.parentNode.insertBefore(js, fjs);
 	  }(document, 'script', 'facebook-jssdk'));
-	</script>
+	</script-->
     </head>
     <body style="margin:0">
         <div id="app">
